--- a/report/ch/unaudited-abridged.yaml
+++ b/report/ch/unaudited-abridged.yaml
@@ -7,25 +7,25 @@
 taxonomy: //import taxonomy/frs102.yaml
 
 # CSS style
-style: //import config/style.yaml
+style: //import report/style.yaml
 
 # The accounting-standards applied.  One of:
 #   frs101, frs102, frsse, full-irs, micro-entities, other-standards,
 #   small-entities-regime.
-accounting-standards: frs102
+accounting-standards: small-entities-regime
 
 # Accounts status, one of:
 #   audit-exempt-no-accountants-report,
 #   audit-exempt-with-accountants-report, audited,
 #   independent-examination, other-reporting-regime
-accounts-status: audited
+accounts-status: audit-exempt-with-accountants-report
 
 # Accounts type, one of:
 #   abbreviated-accounts, abridged-accounts, full-accounts
-accounts-type: full-accounts
+accounts-type: abridged-accounts
 
 # Report title
-title: Audited Full Accounts
+title: Unaudited Abridged Accounts
 
 #############################################################################
 ### Report computations #####################################################
@@ -193,32 +193,6 @@ computations:
   - other-charges
   - tax
 
-- id: charges
-  kind: group
-  description: Charges against profits
-  period: in-year
-  inputs:
-  - depreciation
-  - staff-costs
-  - other-charges
-
-- id: interest-income
-  kind: group
-  description: Interest income
-  period: in-year
-  inputs: []
-
-- id: interest-expense
-  kind: group
-  description: Interest expense
-  period: in-year
-  inputs: []
-
-- id: zero
-  kind: group
-  description: No information
-  period: in-year
-  inputs: []
 
 ##############################
 # Balance sheet ##############
@@ -373,8 +347,6 @@ computations:
   period: at-end
   accounts:
   - Equity:Shareholdings
-  segments:
-    equity: ordinary-shares
 
 # Profit i.e. income minus expenses.
 - id: profit-loss
@@ -486,18 +458,25 @@ computations:
 ##############################
 
 # Ordinary shares held at start of period
-- id: shares-at-start
+- id: ordinary-shares-at-start
   kind: line
-  description: Ordinary Shares held at start
+  description: Ordinary Shares
   period: at-start
   accounts:
   - Equity:Shareholdings:Ordinary Shares
+
+# Preference shares held at start
+- id: preference-shares-at-start
+  kind: line
+  description: Preference Shares
+  period: at-start
+  accounts:
   - Equity:Shareholdings:Preference Shares
 
 # Shares issued
 - id: shares-issued
   kind: line
-  description: Shares Issued in period
+  description: Shares Issued
   period: in-year
   accounts:
   - Equity:Shareholdings
@@ -508,10 +487,9 @@ computations:
   description: Share Capital
   period: at-end
   inputs:
-  - shares-at-start
+  - ordinary-shares-at-start
+  - preference-shares-at-start
   - shares-issued
-  segments:
-    equity: ordinary-shares
 
 #############################################################################
 ### Worksheets ##############################################################
@@ -523,8 +501,9 @@ worksheets:
 - id: balance-sheet
   kind: multi-period
   computations:
-  - fixed-assets
-  - current-assets
+  - id: fixed-assets
+    hide-total: true
+  - id: current-assets
   - prepayments-and-accrued-income
   - creditors-within-1-year
   - net-current-assets
@@ -558,30 +537,6 @@ worksheets:
   computations:
   - share-capital
 
-- id: charges
-  kind: multi-period
-  description: Charges
-  computations:
-  - charges
-
-- id: financial-income
-  kind: multi-period
-  description: Financial income
-  computations:
-  - interest-income
-
-- id: financial-costs
-  kind: multi-period
-  description: Financial income
-  computations:
-  - interest-expense
-
-- id: zero
-  kind: multi-period
-  description: Zero
-  computations:
-  - zero
-
 #############################################################################
 ### Elements describe the report structure ##################################
 #############################################################################
@@ -596,11 +551,12 @@ elements:
   kind: composite
   elements:
   - title
+  - consent
   - company-info
   - directors-report
-  - auditors-report
+  - accountants-report
   - balance-sheet
-  - comprehensive-income
+  - profit-and-loss
   - notes
 
 # Financial position page
@@ -645,7 +601,7 @@ elements:
   - no-audit-required
 
 # Profit and loss
-- id: comprehensive-income
+- id: profit-and-loss
   kind: page
   elements:
   - kind: html
@@ -658,7 +614,7 @@ elements:
         - tag: div
           content: 'expand:note:~[company-name]'
         - tag: div
-          content: Statement of Comprehensive Income
+          content: Income statement
         - tag: div
           content: 'expand:note:For the year ended ~[period-end]'
         - tag: hr
@@ -702,6 +658,31 @@ elements:
       - tag: div
         attributes: { class: subtitle }
         content: 'expand:note:For the year ended ~[period-end]'
+
+- id: consent
+  kind: page
+  elements:
+  - kind: html
+    root:
+      tag: div
+      content:
+      - tag: div
+        attributes: { class: heading }
+        content:
+        - tag: div
+          content: 'expand:note:~[company-name]'
+        - tag: div
+          content: Statement of Consent
+        - tag: div
+          content: 'expand:note:For the year ended ~[period-end]'
+        - tag: hr
+      - tag: div
+        content:
+        - tag: h3
+          content: "Statement of consent to prepare Abridged Financial
+            Statements"
+        - tag: p
+          content: "expand:members-agreed-abridged-accounts"
 
 - id: company-info
   kind: page
@@ -798,6 +779,33 @@ elements:
         src: //import signature.yaml
         alt: Director's signature
 
-- //ref notes
+- id: notes
+  kind: page
+  elements:
+  - kind: html
+    root:
+      tag: div
+      content:
+      - tag: div
+        attributes: { class: heading }
+        content:
+        - tag: div
+          content: 'expand:note:~[company-name]'
+        - tag: div
+          content: Notes to the accounts
+        - tag: div
+          attributes: { class: subtitle }
+          content: 'expand:note:For the year ended ~[period-end]'
+        - tag: hr
+  - kind: notes
+    notes:
 
+    # Some boilerplate notes...
+
+    # Company number and address.
+    - company
+
+    # These accounts were generated using gnucash-ixbrl...  You don't need
+    # to have this one in your report.
+    - software-version
 
