--- a/report/ch/unaudited-abridged.yaml
+++ b/report/ch/unaudited-abridged.yaml
@@ -809,3 +809,7 @@ elements:
     # to have this one in your report.
     - software-version
 
+  - kind: html
+    root:
+      iftrue: metadata.accounting.is-revised
+      content: //import supplementary-note.yaml
