--- a/report/ch/unaudited-micro.yaml
+++ b/report/ch/unaudited-micro.yaml
@@ -684,7 +684,6 @@ elements:
               content: []
             - 'expand:note:~[contact-location::, ] ~[contact-postcode]'
 
-
 - id: signature
   kind: html
   root:
@@ -730,3 +729,8 @@ elements:
     # These accounts were generated using gnucash-ixbrl...  You don't need
     # to have this one in your report.
     - software-version
+
+  - kind: html
+    root:
+      iftrue: metadata.accounting.is-revised
+      content: //import supplementary-note.yaml
