--- a/taxonomy/frs102.yaml
+++ b/taxonomy/frs102.yaml
@@ -240,6 +240,7 @@ document-metadata:
 - contact-phone-number
 - website-url
 - website-description
+- is-revised
 
 # Definitions for metadata fields.  Each field has content defined
 # using 'config' (value fetch from configuration) or 'value' (value defined
@@ -462,7 +463,6 @@ metadata:
 - id: accountant-address
   context: report-period
   config: metadata.accountant.address
-
 - id: auditors-report-date
   kind: date
   context: end-of-reporting-period
@@ -476,7 +476,6 @@ metadata:
 - id: auditor-address
   context: report-period
   config: metadata.auditor.address
-
 - id: directors-report-date
   kind: date
   context: end-of-reporting-period
@@ -484,6 +483,10 @@ metadata:
 - id: directors-report-signing-officer
   context: directors-report-signing-officer
   value: ''
+- id: is-revised
+  kind: bool
+  context: report-period
+  config: metadata.accounting.is-revised
 
 # Boiler-plate notes for the accounts notes page.  ~[...] is used to
 # insert a metadata field value.  The full form is
@@ -707,6 +710,8 @@ tags:
   equity: uk-core:Equity
   share-capital: uk-core:Equity
   nominal-value-of-allotted-share-capital: uk-core:NominalValueAllottedShareCapital
+  is-revised: uk-bus:ReportAnAmendedRevisedVersionPreviouslyFiledReportTruefalse
+  supplementary-note: uk-bus:SupplementaryNote
 
 # Segments / dimensions are mapped here.  Segments are defined with a
 # segment identifier and a value e.g. accounting-standards = frs102.
