Added 'decimals' and 'scale' controls to the worksheet, to allow controlling of rounding and scaling.  Not complete.

--- a/config.yaml
+++ b/config.yaml
@@ -13,18 +13,20 @@ accounts:
   kind: piecash
   file: example2.gnucash
 
-report: //import report/ch/unaudited-micro.yaml
+#report: //import report/ch/unaudited-micro.yaml
 #report: //import report/ch/audited-micro.yaml
 #report: //import report/hmrc/corp-tax.yaml
 #report: //import report/ch/audited-abridged.yaml
 #report: //import report/ch/unaudited-abridged.yaml
 #report: //import report/ch/unaudited-full.yaml
-#report: //import report/ch/audited-full.yaml
+report: //import report/ch/audited-full.yaml
 
 # pretty-print: true
 # Decimal places
-rounding: 0
-currency-label: £
+
+decimals: 2
+scale: 3
+currency-label: £1k
 
 metadata: //import metadata.yaml
 
