- Documented scale/decimals options. - Fixed metadata so that revised accounting reports pass the validator.

--- a/supplementary-note.yaml
+++ b/supplementary-note.yaml
@@ -1,7 +1,7 @@
 tag: div
 content:
 - tag: h3
-  content: Supplementary note on revision of accounts
+  content: 19. Supplementary note on revision of accounts
 - tag: p
   content:
   - fact: supplementary-note
