--- a/config.yaml
+++ b/config.yaml
@@ -14,26 +14,24 @@ accounts:
   file: example2.gnucash
 
 #report: //import report/ch/unaudited-micro.yaml
-#report: //import report/ch/audited-micro.yaml
+report: //import report/ch/audited-micro.yaml
 #report: //import report/hmrc/corp-tax.yaml
 #report: //import report/ch/audited-abridged.yaml
 #report: //import report/ch/unaudited-abridged.yaml
 #report: //import report/ch/unaudited-full.yaml
-report: //import report/ch/audited-full.yaml
+#report: //import report/ch/audited-full.yaml
 
 # pretty-print: true
 # Decimal places
-
-decimals: 2
-scale: 3
-currency-label: £1k
 
 metadata: //import metadata.yaml
 
 directors-report: //import directors-report.yaml
 
 auditors-report: //import auditors-report.yaml
+#auditors-report: //import revised-auditors-report.yaml
 
 accountants-report: //import accountants-report.yaml
 
 notes: //import notes.yaml
+
