--- a/metadata.yaml
+++ b/metadata.yaml
@@ -96,7 +96,9 @@ auditor:
   address: "123a High Avenue Street, Threapminchington QQ99 9AB"
 
   # Date of auditor's report
-  report-date: '2021-01-01'
+  report-date: '2021-02-01'
+#  revised-report-date: '2021-02-24'
+#  directors-report-consistent-revised-accounts: true
 
 directors:
   report-date: '2021-01-01'
@@ -104,7 +106,7 @@ directors:
 accounting:
 
   # Date report was authorised for issue
-  authorised-date: '2021-01-01'
+  authorised-date: '2021-02-01'
 
   # Date of the balance sheet data pull
   balance-sheet-date: '2020-12-31'
@@ -112,8 +114,20 @@ accounting:
   # Accounts currency
   currency: GBP
 
+  # Number of decimal places in figures.  This is pre scale so e.g.
+  # to show pence/cents use 2.  For whole euros/pounds/dollars use 0.
+  decimals: 0
+
+  # Scale factor for figures e.g. for whole euros/pounds/dollars
+  # use 0.  To account in thousands use 3, millions use 6.
+  scale: 0
+
+  # Human readable label in the header.  If you've changed scale you'll want
+  # to change this so it's clear the figures show thousands / millions.
+  currency-label: £
+
   # Report issue date
-  date: '2021-01-01'
+  date: '2021-03-01'
 
   # Periods over which the account was issued.  Current period goes first.
   periods:
@@ -139,7 +153,7 @@ accounting:
   directors-report-signing-officer: director1
 
   # If true, supplementary-note.yaml is included also
-  is-revised: true
+#  is-revised: true
 
 # Tax details, used by the Corporation tax profile
 tax:
