--- a/report/ch/audited-micro.yaml
+++ b/report/ch/audited-micro.yaml
@@ -547,13 +547,18 @@ elements:
 # That is configurable in the taxonomy, not here.
 
 - id: report
-  kind: composite
-  elements:
-  - title
-  - company-info
-  - auditors-report
-  - balance-sheet
-  - notes
+  kind: html
+  root:
+    tag: div
+    content:
+    - element: title
+    - element: company-info
+    - element: auditors-report
+    - element: balance-sheet
+    - ifdef: metadata.accounting.is-revised
+      content:
+        element: revision-info
+    - element: notes
 
 # Financial position page
 - id: balance-sheet
@@ -573,23 +578,25 @@ elements:
         - tag: div
           content: 'expand:note:As at ~[balance-sheet-date]'
         - tag: hr
-  - kind: worksheet
-    worksheet: balance-sheet
-  - balance-sheet-notes
-  - signature
+      - worksheet: balance-sheet
+      - element: balance-sheet-notes
+      - element: signature
 
 - id: balance-sheet-notes
-  kind: notes
-  numbered: false
-  notes:
+  kind: html
+  root:
+    tag: div
+    content:
+    - tag: p
+      content: 
+      # Some boilerplate notes...
+      # ...prepared in accordance with the micro-entity provisions...
+      - expand:micro-entity-provisions
 
-  # Some boilerplate notes...
-
-  # ...prepared in accordance with the micro-entity provisions...
-  - micro-entity-provisions
-
-  # ...directors acknowledge their responsibilities for complying with...
-  - directors-acknowledge
+    - tag: p
+      content: 
+      # ...directors acknowledge their responsibilities for complying with...
+      - expand:directors-acknowledge
 
 # Profit and loss
 - id: profit-and-loss
@@ -708,11 +715,11 @@ elements:
             content: Auditor
           - tag: td
             content:
-            - expand:note:~[auditor.name]
+            - expand:note:~[auditor-name]
             - tag: br
-            - expand:note:~[auditor.business]
+            - expand:note:~[auditor-business]
             - tag: br
-            - expand:note:~[auditor.address]
+            - expand:note:~[auditor-address]
 
 - //ref directors-report
 - //ref auditors-report
@@ -763,7 +770,23 @@ elements:
     # to have this one in your report.
     - software-version
 
+- id: revision-info
+  kind: page
+  elements:
   - kind: html
     root:
-      iftrue: metadata.accounting.is-revised
-      content: //import supplementary-note.yaml
+      tag: div
+      content:
+      - tag: div
+        attributes: { class: heading }
+        content:
+        - tag: div
+          content: 'expand:note:~[company-name]'
+        - tag: div
+          content: Revision of the financial statements
+        - tag: div
+          attributes: { class: subtitle }
+          content: 'expand:note:For the year ended ~[period-end]'
+        - tag: hr
+  - kind: html
+    root: //import supplementary-note.yaml
