--- a/report/ch/unaudited-full.yaml
+++ b/report/ch/unaudited-full.yaml
@@ -593,6 +593,22 @@ elements:
 # That is configurable in the taxonomy, not here.
 
 - id: report
+  kind: html
+  root:
+    tag: div
+    content:
+    - element: title
+    - element: company-info
+    - element: directors-report
+    - element: accountants-report
+    - element: balance-sheet
+    - element: comprehensive-income
+    - ifdef: metadata.accounting.is-revised
+      content:
+        element: revision-info
+    - element: notes
+
+- id: report
   kind: composite
   elements:
   - title
@@ -799,3 +815,24 @@ elements:
         alt: Director's signature
 
 - //ref notes
+
+- id: revision-info
+  kind: page
+  elements:
+  - kind: html
+    root:
+      tag: div
+      content:
+      - tag: div
+        attributes: { class: heading }
+        content:
+        - tag: div
+          content: 'expand:note:~[company-name]'
+        - tag: div
+          content: Revision of the financial statements
+        - tag: div
+          attributes: { class: subtitle }
+          content: 'expand:note:For the year ended ~[period-end]'
+        - tag: hr
+  - kind: html
+    root: //import supplementary-note.yaml
