--- a/supplementary-note.yaml
+++ b/supplementary-note.yaml
@@ -1,12 +1,23 @@
 tag: div
 content:
-- tag: h3
-  content: 19. Supplementary note on revision of accounts
-- tag: p
+- fact: supplementary-note
+  context: report-period
   content:
-  - fact: supplementary-note
-    context: report-period
+  - tag: p
     content:
-    - "This report has been revised to include the correct depreciation
+    - "expand:note:
+       This note revises in certain respects the original annual accounts of
+       the company and is to be treated as forming part of those accounts."
+  - tag: p
+    content:
+    - "expand:note:
+       The annual accounts have been revised as at the date of the original 
+       annual accounts and not as at the date of revision and accordingly
+       do not deal with events between those dates."
+
+  - tag: h3
+    content: Reason for revision
+  - tag: p
+    content: "This report has been revised to include the correct depreciation
        calculation after it was discovered that a number of transactions had
        erroneously included VAT in the VATEX value correctly."
