--- a/test/unaud-micro.yaml
+++ b/test/unaud-micro.yaml
@@ -15,17 +15,16 @@ accounts:
 
 report: //import report/ch/unaudited-micro.yaml
 #report: //import report/ch/audited-micro.yaml
-#report: //import report/ch/audited-small.yaml
+#report: //import report/hmrc/corp-tax.yaml
+#report: //import report/ch/audited-abridged.yaml
 #report: //import report/ch/unaudited-abridged.yaml
 #report: //import report/ch/unaudited-full.yaml
 #report: //import report/ch/audited-full.yaml
-#report: //import report/hmrc/corp-tax.yaml
 
 # pretty-print: true
 # Decimal places
 
 metadata: //import metadata.yaml
-#metadata: //import metadata-revised.yaml
 
 directors-report: //import directors-report.yaml
 
