Tweaks to get all accounts to validate against the validator.

--- a/config.yaml
+++ b/config.yaml
@@ -13,16 +13,15 @@ accounts:
   kind: piecash
   file: example2.gnucash
 
-report: //import report/ch/unaudited-micro.yaml
+#report: //import report/ch/unaudited-micro.yaml
 #report: //import report/ch/audited-micro.yaml
 #report: //import report/ch/audited-small.yaml
 #report: //import report/ch/unaudited-abridged.yaml
-#report: //import report/ch/unaudited-full.yaml
+report: //import report/ch/unaudited-full.yaml
 #report: //import report/ch/audited-full.yaml
 #report: //import report/hmrc/corp-tax.yaml
 
-# pretty-print: true
-# Decimal places
+pretty-print: true
 
 metadata: //import metadata.yaml
 #metadata: //import metadata-revised.yaml
