--- a/report/ch/audited-small.yaml
+++ b/report/ch/audited-small.yaml
@@ -552,6 +552,7 @@ elements:
     tag: div
     content:
     - element: title
+    - element: consent
     - element: company-info
     - element: directors-report
     - element: auditors-report
